Moved the index files and style files to folders

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -23,42 +23,41 @@
 
 		</style>
 	<!-- Below is a link to my CSS file -->
-	<link href="assets/common.css" rel="stylesheet">
-	<link href="assets/direction1.css" rel="stylesheet">
-	<!--<link href="assets/direction2.css" rel="stylesheet">-->
-	<!--<link href="assets/direction3.css" rel="stylesheet">-->
+	<link href="../assets/common.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
 <!-- Header for direction1 and direction2 -->
 		<header>
-			<h1><span id="deco">Decorative</span> To <span id="invisible"><mark>Invisible</mark></span></h1>
+			<h1><span id="deco">Decorative</span> to <span id="invisible"><mark>Invisible</mark></span></h1>
 		</header>
-<!-- Header for direction3 -->
-		<!--<header>
+	<!-- Header for direction3 -->
+		<!-- <header>
 			<h1><span id="deco"><mark>Decorative</mark></span> to<br> <span id="invisible"><span id="in">In-</span><br>visible</span></h1>
 			<h2>Bulgan Bee | 2024</h2>
-		</header>-->
-<!-- Table of contents for direction3 -->
-	<!--<div class="flex-container">
+		</header> -->
+	<!-- Table of contents for direction3 -->
+	<div class="flex-container">
 		<div class="links">
 		<a href="#"><button>Table of Contents</button></a>
 		<a href="#"><button><span id="plus">&#43;</button></a>
 		</div>
-		</div>-->
+		</div>
 <!-- Articles link for direction2 -->
-		<!--<div class="flex-container">
+		<!-- <div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
 			<a href="#gestalt"><button>Factory</button></a>
 			<a href="#c1962"><button>Concept</button></a>
 			</div> 
-	</div>-->
+	</div> -->
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 			<section>
 				<h3 class="introh3"><!--<span id="circle">&#9680;</span>--> Introduction</h3>
 				<p class="intropa">Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
-<!-- Section for direction3 -->
+				<p>Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital,” writes designer Jacob Lindgren. “A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.” In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
+	<!-- Section for direction3 -->
 				<!-- <section class="aboutarticles">
 				 <h3 class="start">Start reading</h3>
 				 <h3 class="articlename"><u>Design & <span id="red">Crime</span><br>& Other Diatribes</u></h3>
@@ -71,10 +70,10 @@
 					   <h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 						  <p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
-				</section> -->
+				</section>  -->
 			</article>
-	<!-- Section for direction2 -->
-				<!--<section class="articlesection">
+<!-- Section for direction2 -->
+				<section class="articlesection">
 					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
 						<a href="#" id="arrow2">&rarr;</a>
 					</div>
@@ -97,9 +96,9 @@
 					<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 					<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
-			</section>-->
-	<!-- Articles link for direction1 -->
-			<h3 class="articlesmain">Articles</h3>	
+			</section>
+<!-- Articles link for direction1 -->
+			<!-- <h3 class="articlesmain">Articles</h3>	
 		</article>
 	
 		<div class="flex-container">
@@ -112,7 +111,7 @@
 		<a href="#designandcrime"><button>The Concept Of The Design Discipline &nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
 	</div> 
 	<article>
-		<section class="articlesection">
+			<!-- <section class="articlesection">
 			<h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
 			<h4>Hal Foster, 2000</h4>
 			<p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
@@ -126,7 +125,7 @@
 			<h3 class="articlename">The <span id="red">Concept</span> Of<br>The Design Discipline</h3>
 			<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 			<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
-		</section>
+		</section> -->
 	</article>
 		<footer>
 			<h1 class="footer"><mark>Intro and web by</mark></h1>
