--- a/index.html
+++ b/index.html
@@ -13,48 +13,19 @@
 	<body>
 <!-- Header for direction1 and direction2 -->
 		<header>
-			<h1><span id="deco">Decorative</span> to <span id="invisible"><mark>Invisible</mark></span></h1>
+			<div>
+			<div class="crime"><h1>Crime</h1></div>
+			<div class="factory"><h1>Factory</h1></div>
+			<div class="discipline"><h1>Discipline</h1></div>
+			</div>
 		</header>
-	<!-- Table of contents for direction3 -->
-	<div class="flex-container">
-		<div class="links">
-		<a href="#"><button>Table of Contents</button></a>
-		<a href="#"><button><span id="plus">&#43;</button></a>
-		</div>
-		</div>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 			<section>
-				<h3 class="introh3"><!--<span id="circle">&#9680;</span>--> Introduction</h3>
+				<h3>Evolution of Design Function</h3>
 				<p class="intropa">Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 				<p>Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital,” writes designer Jacob Lindgren. “A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.” In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
 			</article>
-<!-- Section for direction2 -->
-				<section class="articlesection">
-					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
-						<a href="#" id="arrow2">&rarr;</a>
-					</div>
-					<h4>Hal Foster, 2000</h4>
-					<p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
-				</section>
-				<section class="articlesection">
-					<div class="articlelink">
-						<h3 class="articlename">Graphic Design's <span id="red">Factory</span> Settings</h3>
-						<a href="#" id="arrow2">&rarr;</a>
-					</div>
-					<h4>Jacob Lindgren, 2020</h4>
-					<p class="articleintro">The author criticizes how graphic design is shaped by mass production, and schools teach students how to serve consumerist needs rather than challenging the capitalist system.</p>
-				</section>
-				<section class="articlesection">
-					<div class="articlelink">
-						<h3 class="articlename">The <span id="red">Concept</span> Of<br>The Design Discipline</h3>
-						<a href="#" id="arrow2">&rarr;</a>
-					</div>
-					<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
-					<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
-				</section>
-			</section>
-	</article>
 		<footer>
 			<h1 class="footer"><mark>Intro and web by</mark></h1>
 			<!--<h1 class="footer">Intro and web by</h1>-->
