Added style to header h1 h2

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -13,7 +13,8 @@
 	<body>
 <!-- Main title -->
 		<header>
-			<h1><span id="deco">Decorative</span> to <span id="invisible"><mark>Invisible</mark></span></h1>
+			<h1>Design &</h1>
+			<h2>Crime</h2>
 		</header>
 	<!-- Article for Crime and Design -->
 	 <article>
