--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -15,6 +15,8 @@
 		<header>
 			<h1>Design &</h1>
 			<h2>Crime</h2>
+			<h2 span id="titlecontinue">& Other Diatribes</h2>
+			<h3>Ch.2 &nbsp; &nbsp; &nbsp;Hal Foster  &nbsp; &nbsp; &nbsp;2000</h3>
 		</header>
 	<!-- Article for Crime and Design -->
 	 <article>
