Added read next section styling to Crime article

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -24,7 +24,7 @@
 				<p>The turn of one century calls up others, and 2000 was no exception. Over the last few years Style 1900 or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a Gesamtkunstwerk or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow. </p>
 			<section class="withbackground">
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer nouveau, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present</p>
-				<p class="bigtext1">— an intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a Style 2000.</p>
+				<p class="bigtext1">— an intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.</p>
 				<p>Adolf Loos, the Viennese architect of austere facades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schonberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline. </p>
 				<p>In this regard “Ornament and Crime” (1908) is his fiercest polemic, for there he associates the Art Nouveau designer with a child smearing walls and a “Papuan” tattooing skin. For Loos the ornate design of Art Nouveau is erotic and degenerate, a reversal of the proper path of civilization to sublimate, to distinguish, and to purify: thus his notorious formula</p>
 				<p class="bigtext1">- “the evolution of culture is synonymous with the removal of ornament from utilitarian objects” — and his infamous association of “ornament and crime.”'</p>
@@ -50,14 +50,9 @@
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
 			</section>
 			<section class="readnext">
-				<h3>Read next</h3>
-				<h2>Graphic Design’s Factory Settings</h2>
+				<h3 span id="readnexttext">Read next</h3>
+				<h2 span id="nextarticle">Graphic Design’s Factory Settings</h2>
 			</section>
 			</article>
-		<footer>
-			<h1 class="footer"><mark>Intro and web by</mark></h1>
-			<!--<h1 class="footer">Intro and web by</h1>-->
-			<h1 class="authorfooter">Bulgan Bee</h1>
-		</footer>
 	</body>
 </html>
