Added edits to the article

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -20,7 +20,7 @@
 		</header>
 	<!-- Article for Crime and Design -->
 	 <article>
-		<section>
+		<section class="normal">
 				<p>The turn of one century calls up others, and 2000 was no exception. Over the last few years Style 1900 or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a Gesamtkunstwerk or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow. </p>
 			<section class="withbackground">
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer nouveau, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present</p>
@@ -30,7 +30,7 @@
 				<p class="bigtext1">- “the evolution of culture is synonymous with the removal of ornament from utilitarian objects” — and his infamous association of “ornament and crime.”'</p>
 				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p>
 			</section>
-		<section>
+		<section class="normal">
 				<p>Loos began his battle with Art Nouveau a decade before “Ornament and Crime.” A pointed attack comes in 1900, in the form of an allegorical skit about “a poor little rich man” who commissions an Art Nouveau designer to put “Art in each and every thing:</p>
 				<p>Each room formed a symphony of colors, complete in itself. Walls, wall coverings, furniture, and materials were made to harmonize in the most artful ways. Each household item had its own specific place and was integrated with the others in the most wonderful combinations. The architect has forgotten nothing, absolutely nothing. Cigar ashtrays, cutlery, light switches — everything, everything was made by him.</p>
 				<p>This <em>Gesamtkunstwerk</em> does more than combine architecture, art, and craft; it commingles subject and object:</p>
@@ -46,7 +46,7 @@
 				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [Spielraum]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p>
 				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object {the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, Fountain, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture.</p>
 			</section>
-			<section>
+			<section class="normal">
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
 			</section>
 			<section class="readnext">
