--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -45,14 +45,23 @@
 			<p class="bigtext1">This “other” dimension[18] or, as we propose, an “alternative disciplinarity”—an “alterplinarity” that does not rely on historic disciplines of design as the boundaries of our understanding has been superseded.</p>
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
 		</section>
+		<h3>This Is The ‘Alterplinary’ Manifesto:</h3>
 	<section class="withbackground">
-	<h3>This Is The ‘Alterplinary’ Manifesto:</h3>
-	<h3 class="subheading">01 Dispose Carefully of What You Know</h3>
+	<h4>01 Dispose Carefully of What You Know</h4>
 		<p>All design thought and action should emanate from a point of not knowing. Socrates, the Greek philosopher, is attributed to have said that:</p>
 		<p class="bigtext1">“The only true wisdom is in knowing you know nothing.”</p>
 		<p>This resonates well with Kenya Hara’s notion of “Exformation”, where he makes clear that Exformation doesn’t mean making known, but understanding how little we know.[19] If we can recognize that we know so little, a method for finding out how little we know will become clear to us as well. Kenya Hara believes that comprehension and recognition of the unknown is a necessary for the beginning of any design project. Exformation should be considered the direct opposite to the familiar, meaning exploration of the unknown. Hara emphasizes how our lives are full of wonders and the unknown, and how, as a race, we need to constantly wake up and consider new perspectives.</p>
 		<p>He believes that “known” and “understood” are both horrible concepts, which usually means that your works (designs) have nothing new to offer the world. Alternatively, to succeed, Kenya Hara suggests, one has to look for the unknown consciously. The concept of “not knowing” is increasingly being acknowledged as a critical skill to tackle the complex problems we face in contemporary societies.</p>
 		<p>That is, we should not fear heading uncomfortably toward the unknown. Rather, by developing a relationship with “not knowing,” we may discover new ways of designing, living, working and thriving in our modern world. Not knowing can be an exciting proposition where we are no longer limited by what we already know, which allows for richer possibilities and more varied wisdom to prosper.[20]</p>
+	<h4>02 Teach What You Don’t Know</h4>
+	<p>When confronted with the problem of teaching a language he did not speak, the eighteenth century educationalist Joseph Jacotot discovered it was possible to teach what you don’t know. In Jacque Ranciere’s reprise of Jacotot’s relevance in his book, The Ignorant Schoolmaster, he reminds us that everyone is taught to forget that we all possess the ability to learn.[21] For almost a century design has been taught from the perspective of the Bauhaus, which relied on pedagogy that forgot the machine had already made the idea into an image of itself, setting design education on a path resulting in imitation and derivation (rather than invention or innovation), which remain the prevalent models today.</p>
+	<p>Design has evolved to require a completely different logic from that which is informing its current learning models, where so many degree programs are guided by professionally licensed trajectories that are more germane to history than the possible future scenarios we now need to envisage to live in a rapidly changing world. Similar to Jacotot’s experiences, Therese Huston’s book, “Teaching What You Don’t Know,” provides clear evidence that teaching outside of one’s area of competence is typically the norm in the U.S. academy.[22]</p>
+	<p>Rather than viewing this as a weakness, however, Huston suggests that teaching what you don’t know may have certain advantages. Huston argues that</p>
+	<p class="bigtext1">novice tutors tend to show more empathy and have more realistic estimations of the time it takes new learners to complete tasks.</p>
+	<p>Expert tutors, on the other hand, often expect more than new learners can handle. It is also suggested that novice tutors can better envision the steps that a beginner will take, what kinds of mistakes he or she will make, and which steps he or she may have to repeat.</p>
+	<p>Furthermore, novice tutors are more likely than expert tutors to relate difficult concepts to everyday life, and to make use of common knowledge to facilitate this (i.e., to relate these concepts to things that the learner likely already knows). Given the perilous state design currently finds itself in, teaching what we don’t know may herald a refreshing alternative to design’s historical preoccupation with the modern project.</p>
+	<h4>03 Take Design Seriously</h4>
+	<p></p>
 	</section>
 			<section class="readnext">
 				<h3 span id="readnexttext">Read next</h3>
