--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -16,7 +16,7 @@
 			<h1>The Concept of</h1>
 			<h2>Design</h2>
 			<h2 span id="titlecontinue">Discipline</h2>
-			<h3>Vol.1 &nbsp;Paul A. Rodgers&nbsp; Craig Bremner &nbsp; &nbsp; &nbsp;2017</h3>
+			<h3 span id="author">Vol.1 &nbsp;Paul A. Rodgers&nbsp; Craig Bremner &nbsp; &nbsp; &nbsp;2017</h3>
 		</header>
 	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
