--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -18,6 +18,12 @@
 			<h2 span id="titlecontinue">Discipline</h2>
 			<h3 span id="author">Vol.1 &nbsp;Paul A. Rodgers&nbsp; Craig Bremner &nbsp; &nbsp; &nbsp;2017</h3>
 		</header>
+		<div id="navbar">
+			<a href="#home">Home</a>
+			<a href="#news">Crime</a>
+			<a href="#contact">Factory</a>
+			<a href="#contact"><mark>Discipline</mark></a>
+		  </div>
 	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
 		<h3>Abstract</h3>
