--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -13,17 +13,20 @@
 	<body>
 <!-- Main title -->
 		<header>
-			<h1>The Concept of</h1>
+			<h1 span id="top">The Concept of</h1>
 			<h2>Design</h2>
 			<h2 span id="titlecontinue">Discipline</h2>
 			<h3 span id="author">Vol.1 &nbsp;Paul A. Rodgers&nbsp; Craig Bremner &nbsp; &nbsp; &nbsp;2017</h3>
 		</header>
 		<div id="navbar">
-			<a href="#home">Home</a>
-			<a href="#news">Crime</a>
-			<a href="#contact">Factory</a>
-			<a href="#contact"><mark>Discipline</mark></a>
+			<a href="../">Home</a>
+			<a href="../article-crime/">Crime</a>
+			<a href="../article-factory/">Factory</a>
+			<a href="../article-discipline/"><mark>Discipline</mark></a>
 		  </div>
+		  <div id="backtotop">
+			<a href="#top" span id="arrow">&#x21E7;</a>
+		</div>
 	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
 		<h3>Abstract</h3>
